AASA content type fix

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,18 @@
 [build]
   command = "npm run build"
   publish = ".next"
+
+[[headers]]
+  for = "/.well-known/apple-app-site-association"
+  [headers.values]
+    Content-Type = "application/json"
+    Access-Control-Allow-Origin = "*"
+    Cache-Control = "public, max-age=300"
+
+# Explicit redirect rule for AASA file
+[[redirects]]
+  from = "/.well-known/apple-app-site-association"
+  to = "/.well-known/apple-app-site-association"
+  status = 200
+  force = true
+  headers = {Content-Type = "application/json"}
