--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   command = "npm run build"
   publish = ".next"
 
+[[plugins]]
+  package = "./netlify-plugin-aasa.js"
+
 [[headers]]
   for = "/.well-known/apple-app-site-association"
   [headers.values]
@@ -12,7 +15,7 @@
 # Explicit redirect rule for AASA file
 [[redirects]]
   from = "/.well-known/apple-app-site-association"
-  to = "/.well-known/apple-app-site-association"
+  to = "/.well-known/apple-app-site-association.json"
   status = 200
   force = true
   headers = {Content-Type = "application/json"}
